# xaxiu-harness

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  MIGRATION.md  README.md  pyproject.toml
.claude/: settings.json
coord/: CURRENT_PLAN.md  SESSION_BOOTSTRAP.md  SESSION_HANDOFF_2026-05-23.md  SESSION_HANDOFF_2026-05-24.md  SESSION_HANDOFF_2026-05-25.md  STATUS.csv  canary_state.json  engine_reliability.json  mutation_targets.yaml  session_handoff_2026-05-21T0630.md
docs/: AGENT_QUICKSTART.md  AGENT_REFERENCE.md  CORE.md  HANDOFF.md  HARNESS_VISUAL_MANUAL.md  INTERNAL_OPERATOR_RUNBOOK.md  KEY_ROTATION_PLAYBOOK.md  OPERATOR_GUIDE.md  OPERATOR_QUICKSTART.md  OPERATOR_RUNBOOK.md  USING_HARNESS_FROM_OTHER_PROJECTS.md
memory/: README.md  engine-reliability.md  file-replace-protocol.md  operator-conventions.md  spec-composition.md
scripts/: apply_dispatch_response.py  audit_silent_excepts.py  audit_task_with_mimo.py  audit_w11_all_panel20.py  audit_w_action_panel20.py  audit_wave10_all.py  audit_wave7_all.py  audit_wave8_all.py  bench_mimo_vs_kimi_deepseek.py  dispatch_infra_review.py  dispatch_meta_review.py  dispatch_session_review_5mimo.py  dispatch_wave1_corrective.py  extract_session_arc.py  infra_smoke.py  investigate_mimo_failures.py  investigate_mimo_failures_round2.py  investigate_mimo_failures_round3_retries.py  mimo_final_verdict_only.py  mimo_production_validation.py  multi_agent_coverage.py  multi_agent_execute_probes.py  operator_review_panel20.py  operator_review_panel20_round2.py  operator_review_panel20_round2_retry.py  orchestrator_a_claude_p.py  orchestrator_b_single_engine.py  orchestrator_brainstorm_20agents.py  orchestrator_c_hybrid.py  orchestrator_lib.py  pattern_b_evaluation_panel.py  pattern_b_smoke_matrix.py  phase_d_stress_queue.py  plan_next_move.py  post_v1_master_plan_panel.py  probe_deepseek_streaming.py  reconcile_stale_status_rows_2026_05_28.py  review_aquinas_brief.py  run_agent_as_user_panel.py  run_chat_tier_roadmap_panel.py  (+19 more)
spec/: ACCEPTED_LIMITATIONS.md  autonomous-loops.md  coord-run-runbook.md  engine-routing-empirical.md  errors.md  multi-agent-harness-architecture.md  observer.md  operator-modes.md  proxy-failure-matrix.md  proxy-recovery.md  session-derived-feature-roster.md  session-handoff-monitor.md  status-tracker.md  v1-architecture.md  v1.1-operator-experience.md  v1.2-security-amendments.md  wave-10-plan.md  wave-11-plan.md  wave-4-installer.md  wave-5-templates-nl-yaml.md  wave-6-plan.md  wave-7-plan.md  wave-8-plan.md  wave-9-plan.md
tests/: conftest.py  test_adapter_create.py  test_adapter_from_description.py  test_adapter_validate_json.py  test_agent_init.py  test_agent_instructions.py  test_agent_telemetry.py  test_ask.py  test_ask_history.py  test_ask_noise.py  test_audit_avg_of_n.py  test_audit_chain.py  test_audit_jsonl.py  test_audit_w_action_panel20.py  test_backup_restore.py  test_budget.py  test_budget_export_daily.py  test_budget_per_engine.py  test_claude_code_subprocess_engine.py  test_claude_via_cc.py  test_claudemd_invocation_works.py  test_cli.py  test_cli_helpers.py  test_cli_unicode_safety.py  test_concrete_mutation_killers.py  test_coord_cancel.py  test_coord_checkpoint.py  test_coord_cleanup.py  test_coord_cli.py  test_coord_coordinator.py  test_coord_integrator.py  test_coord_list_cli.py  test_coord_lockfile.py  test_coord_notify.py  test_coord_plan_from_description.py  test_coord_planner.py  test_coord_replan.py  test_coord_rerun_failed.py  test_coord_retry_cli.py  (+152 more)
(+766 files in other folders)
