[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xaxiu-harness"
version = "0.1.0"
description = "Cross-project multi-engine LLM dispatch + monitoring tool"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "websockets>=12.0",
    "rich>=13.7",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "slow: real-subprocess wall-clock tests (W9-CLI-TIMEOUT-BUDGET).  Selectable with `pytest -m slow`; deselect with `pytest -m 'not slow'`.",
]

[tool.ruff]
line-length = 100
target-version = "py311"
